--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -2,6 +2,13 @@
 //
 // Use of this source code is governed by the LICENSE file in this repository.
 
+// .stage-node {
+//   background: red!important;
+// }
+// .stage-node a {
+//   outline: none !important;
+// }
+
 html {
   font-family: var(--font-family);
 }
