fix: a couple of UI fixes (#505)

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -713,7 +713,7 @@ details.build-toggle {
 
 .build-history-title {
   display: inline;
-  padding: 0.4rem 0 0.4rem 0.4rem;
+  padding: 0.4rem 0;
 
   font-size: 0.8em;
 }
@@ -735,19 +735,11 @@ details.build-toggle {
 }
 
 .recent-build-link.-current {
-  transform: translateX(5px);
-
-  transition: transform 0.1s;
-
-  will-change: transform;
+  margin: 0 0.2rem;
 }
 
-.recent-build-link.-older {
-  transform: translateX(10px);
-
-  transition: transform 0.1s;
-
-  will-change: transform;
+.recent-build:first-child .recent-build-link.-current {
+  margin: 0 0.2rem 0 0;
 }
 
 .build-history .recent-build-link .-icon {
@@ -1406,6 +1398,7 @@ details.build-toggle {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  margin: 1rem 0;
 
   background-color: var(--color-bg-dark);
 }
@@ -1413,7 +1406,6 @@ details.build-toggle {
 .build-filters {
   flex-flow: wrap;
   justify-content: flex-start;
-  margin: 1rem 0;
   padding: 1rem;
 
   font-size: 1rem;
