--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1108,6 +1108,17 @@ details.build-toggle {
   }
 }
 
+.log-timestamp-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  flex: 1;
+}
+
+.log-timestamp-wrapper .log-timestamp {
+  color: orange;
+}
+
 .animated {
   animation-duration: 1s;
   animation-fill-mode: both;
