wip: optional log directives for custom rendering log lines

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1117,6 +1117,7 @@ details.build-toggle {
 
 .log-timestamp-wrapper .log-timestamp {
   color: orange;
+  // font-family: var(--font-code);
 }
 
 .animated {
