--- a/src/scss/_table.scss
+++ b/src/scss/_table.scss
@@ -62,15 +62,17 @@
   max-width: 15rem;
 }
 
-.table-base td input {
-  width: stretch;
+.table-base td .list-item {
+  display: flex;
+  max-width: 12rem;
   margin: 0.2rem 0;
-  padding: 0.5rem;
+  padding: 0.4rem 0.8rem;
+  overflow: scroll;
 
   color: var(--color-text);
+  font-size: 1rem;
 
   background-color: var(--color-bg);
-  border: none;
 }
 
 .table-base .source-id {
