--- a/src/scss/_table.scss
+++ b/src/scss/_table.scss
@@ -44,14 +44,35 @@
 
 .table-base th {
   padding: 0.625em;
+  overflow: hidden;
 
   font-weight: bold;
   white-space: nowrap;
   text-align: left;
+  text-overflow: ellipsis;
 }
 
 .table-base td {
   padding: 0.625em;
+
+  vertical-align: top;
+}
+
+.table-base td.secret-name {
+  max-width: 15rem;
+}
+
+.table-base td .list-item {
+  display: flex;
+  max-width: 12rem;
+  margin: 0.2rem 0;
+  padding: 0.4rem 0.8rem;
+  overflow: scroll;
+
+  color: var(--color-text);
+  font-size: 1rem;
+
+  background-color: var(--color-bg);
 }
 
 .table-base .source-id {
