--- a/src/scss/_details.scss
+++ b/src/scss/_details.scss
@@ -47,6 +47,15 @@
     }
   }
 
+  .details-skeleton {
+    svg {
+      color: var(--color-bg-light);
+    }
+    height: 1.6rem;
+
+    pointer-events: none;
+  }
+
   .details-icon-expand {
     position: absolute;
     top: 0.2em;
