--- a/src/scss/_table.scss
+++ b/src/scss/_table.scss
@@ -52,10 +52,8 @@
   text-overflow: ellipsis;
 }
 
-.table-base td.ref {
-  max-width: 15rem;
-}
-
+.table-base td.name,
+.table-base td.ref,
 .table-base td.description {
   max-width: 15rem;
 }
@@ -64,10 +62,6 @@
   padding: 0.625em;
 
   vertical-align: top;
-}
-
-.table-base td.secret-name {
-  max-width: 15rem;
 }
 
 .table-base td .list-item {
@@ -178,12 +172,27 @@
   }
 
   .table-base td {
-    display: block;
+    display: flex;
+    justify-content: space-between;
 
     font-size: 0.8em;
     text-align: right;
 
     border-bottom: 1px solid var(--color-bg-light);
+  }
+
+  .table-base td.name,
+  .table-base td.ref,
+  .table-base td.description {
+    max-width: initial;
+  }
+
+  .table-base td a {
+    max-width: 8rem;
+  }
+
+  .table-base td .list-item {
+    font-size: 0.9rem;
   }
 
   .table-base td::before {
