--- a/src/scss/_animations.scss
+++ b/src/scss/_animations.scss
@@ -86,3 +86,16 @@
     opacity: 0;
   }
 }
+@keyframes shimmer {
+  0% {
+    // width: 100%;
+
+    opacity: 1;
+  }
+
+  100% {
+    // width: 50%;
+    transform: translateX(100%);
+    opacity: 0;
+  }
+}
