--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -45,7 +45,7 @@
   // for buttons with icons
   // expects SVG icon and
   // assumes it is rendered first
-  > svg {
+  >svg {
     display: inline-block;
     margin-right: 0.5rem;
 
@@ -96,7 +96,7 @@
 // TODO: move to separate file?
 .-failure {
   &.-animate-rotate {
-    > svg {
+    >svg {
       transition: transform 0.2s ease-in-out;
     }
 
@@ -164,6 +164,7 @@
   &.-failure,
   &.-loading,
   &.-running {
+
     &:hover,
     &:focus {
       background-color: var(--color-bg);
@@ -206,7 +207,7 @@
 
   background-color: transparent;
 
-  > svg {
+  >svg {
     margin: 0;
 
     vertical-align: middle;
@@ -231,4 +232,183 @@
 // deal with button groupings
 .buttons .button:not(:last-child) {
   margin-right: 0.5rem;
+}
+
+
+.multiselect {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  background-color: var(--color-bg-dark);
+
+  &.-active {
+    outline: 1px solid var(--color-secondary);
+  }
+
+  .multiselect-label {}
+
+  .multiselect-fakeselect {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+  }
+
+  .multiselect-fakeoptions-container {
+    position: relative;
+    z-index: 1;
+
+    .multiselect-fakeoptions {
+      position: absolute;
+      width: 100%;
+      background-color: var(--color-bg-dark);
+      padding: 0.6rem 0;
+      max-height: 300px;
+      overflow-y: scroll;
+      margin-top: 0.2rem;
+
+      div {
+        padding: .6rem 1rem;
+        margin: 0.3rem 0.3rem 0.3rem 0.3rem;
+
+
+      }
+
+      .select-option:hover {
+        background-color: var(--color-bg);
+      }
+    }
+  }
+
+  .multiselect-shortcut-input {
+    flex: 1;
+    padding: 0.4rem 0.2rem !important;
+    border-bottom: none !important;
+    background-color: var(--color-bg-dark) !important;
+  }
+
+  .select-option:focus {
+    outline: var(--color-secondary) dotted var(--line-width);
+    outline-offset: var(--line-width);
+  }
+
+  .multiselect-input {
+    border: 1px solid var(--color-bg-dark);
+    padding: .1rem 0rem .1rem .4rem;
+
+    display: flex;
+    position: relative;
+    min-height: 49px;
+
+    .left-container-for-chips {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      flex: 1 1 0%;
+      padding: 0.4rem 0rem;
+
+      .form-control {
+        flex: 1 1 auto;
+        min-width: 4px;
+
+
+
+        input {
+          flex: 1 1 auto;
+        }
+
+      }
+    }
+
+    .multiselect-noneselected {
+      padding-left: 0.6rem;
+      color: inherit;
+      opacity: 0.54;
+      font-size: 1rem;
+    }
+
+    .right-container-for-clearall {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+
+      button {
+        margin: 0 1rem;
+        position: relative; // fixes z-fighting
+        // z-index: 1;
+      }
+
+      svg {
+        // color: var(--color-bg-dark);
+      }
+    }
+
+    .right-container-for-arrow {
+      border-left: 1px solid var(--color-text);
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+
+      div {
+        padding: 0 1rem;
+        flex: 0;
+      }
+
+      svg {
+        // color: var(--color-bg-dark);
+      }
+    }
+  }
+
+
+  .multiselect-selected-option {
+    font-size: 1rem;
+
+    background-color: var(--color-bg);
+    border-radius: 0.1rem;
+    margin: 0.1rem 0.1rem;
+    // padding: 0.1rem;
+    display: flex;
+    align-items: center;
+    padding-left: 0.4rem;
+
+    .value {
+      // this needs revision, the x being close enough to the number but the focus outline is overlapping
+      margin-right: 4px;
+    }
+
+    button {
+      position: relative;
+      margin-left: 0.2rem;
+      margin-right: 0.2rem;
+      margin-top: 0;
+      margin-bottom: 0;
+      position: relative; // fixes z-fighting
+    }
+
+    button:hover {
+      color: red;
+      background-color: darkred;
+    }
+
+    // height: 36px;
+    .-icon {
+      padding-bottom: 1.5px;
+    }
+  }
+}
+
+select.frequency-select {
+  color: var(--color-text);
+  background: var(--color-bg-dark);
+  box-shadow: none;
+  border: none;
+  padding: 0.4rem 0.6rem;
+  // margin-top: 0.4rem;
+  font-size: 1rem;
+}
+
+select.frequency-select:focus, select.frequency-select:active {
+  outline: var(--color-secondary) dotted var(--line-width);
+  outline-offset: var(--line-width);
 }
