--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1526,6 +1526,11 @@ details.build-toggle {
   border-bottom: 2px solid var(--color-secondary);
 }
 
+.manage-schedule .not-allowed {
+  display: inline-block;
+  margin-top: 0.6rem;
+}
+
 .secret-form,
 .deployment-form,
 .schedule-form {
