fix: allow for larger secret key width (#697)

--- a/src/scss/_table.scss
+++ b/src/scss/_table.scss
@@ -77,6 +77,10 @@
   background-color: var(--color-bg);
 }
 
+td .key .list-item {
+  max-width: 24rem;
+}
+
 .table-base .source-id {
   padding: 0.2rem 1rem;
 
