--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1689,6 +1689,7 @@ details.build-toggle {
 
 .field-description {
   margin-left: 1rem;
+  margin-right: 0.6rem;
 
   font-weight: 300;
   font-size: 1rem;
