--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -3,11 +3,23 @@
 // Use of this source code is governed by the LICENSE file in this repository.
 
 // .stage-node {
-//   background: red!important;
+//   border: 24px solid transparent;
+//   border-image: url("https://skullctf.com/images/skull-9.svg") 24 round;
 // }
+
 // .stage-node a {
 //   outline: none !important;
 // }
+
+.stage-node-outline {
+  animation: dash 5s linear;
+}
+
+@keyframes dash {
+  to {
+    stroke-dashoffset: 1000;
+  }
+}
 
 html {
   font-family: var(--font-family);
