--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -1,6 +1,4 @@
-// Copyright (c) 2022 Target Brands, Inc. All rights reserved.
-//
-// Use of this source code is governed by the LICENSE file in this repository.
+// SPDX-License-Identifier: Apache-2.0
 
 // utility for adding pseudo content slashes as separators
 // used mostly for separating links and breadcrumbs
