fix: replace purgecss overrides

--- a/src/scss/_graph.scss
+++ b/src/scss/_graph.scss
@@ -170,6 +170,7 @@
 // end: classes controlled by Elm
 
 // start: classes controlled by d3
+/*! purgecss start ignore */
 .d3-build-graph-node-outline-rect {
   fill: none;
   stroke-width: 1.8;
@@ -288,3 +289,4 @@
 }
 
 // end: classes controlled by d3
+/*! purgecss end ignore */
