--- a/src/scss/_graph.scss
+++ b/src/scss/_graph.scss
@@ -55,7 +55,7 @@
   width: 100%;
   min-height: 300px;
 
-  background: var(--color-bg-dark);
+  background: var(--color-bg);
   border: 1px solid var(--color-bg-light);
 
   .large-loader {
@@ -78,8 +78,11 @@
 
   list-style: none;
 
+  pointer-events: none;
+
   li {
     margin-top: 0.4rem;
+    margin-left: -1rem;
 
     &.-running-hover {
       animation: dash 100s linear;
@@ -88,15 +91,16 @@
   }
 }
 
-.elm-build-graph-legend-item,
-.elm-build-graph-legend-line {
-  margin-right: 0.4rem;
-  margin-left: -0.6rem;
-
-  stroke: var(--color-gray);
-}
-
 .elm-build-graph-legend-item {
+  margin-right: 0.2rem;
+
+  fill: var(--color-bg-dark);
+  stroke: var(--color-gray);
+
+  .-pending {
+    stroke-dasharray: 7, 4;
+  }
+
   .-running {
     stroke: var(--color-yellow);
     stroke-dasharray: 7, 4;
@@ -108,26 +112,34 @@
 
   .-failure {
     stroke: var(--color-red);
-    stroke-dasharray: 2 3;
+    stroke-dasharray: 3 3;
   }
 
   .-selected {
     stroke: var(--color-primary);
-    stroke-width: 7;
+    stroke-width: 5;
   }
 
-  .-killed {
+  .-killed,
+  .-skipped {
     stroke: var(--color-lavender);
     stroke-dasharray: 2, 4;
     stroke-linecap: round;
   }
-
-  .-pending {
-    stroke-dasharray: 7, 4;
-  }
 }
 
 .elm-build-graph-legend-line {
+  margin-right: 0.2rem;
+
+  fill: var(--color-bg-dark);
+  stroke: var(--color-gray);
+
+  .-pending {
+    fill: var(--color-bg-dark);
+    stroke: var(--color-gray);
+    stroke-dasharray: 5, 3;
+  }
+
   .-running {
     stroke: var(--color-yellow);
     stroke-dasharray: 7, 4;
@@ -153,24 +165,33 @@
   background-color: var(--color-bg);
   border-right: 1px solid var(--color-bg-light);
 
-  .elm-build-graph-search-filter-form-label {
-    // todo: remove this
-    margin-left: 0;
-    padding-bottom: 0.5rem;
-    padding-left: 0.5rem;
-
+  .elm-build-graph-search-filter-1 {
     border-bottom: var(--line-width) solid var(--color-primary);
+    input {
+      border-bottom: none !important;
+    }
   }
 
-  .elm-build-graph-action-filter-clear {
-    margin-left: 0.8rem;
+  label {
+    padding-left: 0.5rem;
   }
 }
 
 // end: classes controlled by Elm
 
 // start: classes controlled by d3
+
 /*! purgecss start ignore */
+
+.d3-build-graph-node {
+  fill: var(--color-bg-dark);
+  stroke: var(--color-bg-dark);
+}
+
+.d3-build-graph-node-a {
+  fill: var(--color-text);
+}
+
 .d3-build-graph-node-outline-rect {
   fill: none;
   stroke-width: 1.8;
@@ -195,40 +216,92 @@
 
   &.-canceled,
   &.-failure {
-    stroke-dasharray: 2 3;
+    stroke-dasharray: 4 3;
 
     stroke: var(--color-red);
   }
 
-  &.-killed {
+  &.-killed,
+  &.-skipped {
     stroke-dasharray: 5;
     stroke-linecap: round;
 
     stroke: var(--color-lavender);
   }
 
-  &.-skipped {
-    stroke: var(--color-red);
-  }
-
   &.-focus {
     stroke: var(--color-primary);
-    stroke-width: 2;
+    stroke-width: 3;
   }
 
   &.-hover {
     stroke: var(--color-primary);
-    stroke-width: 3;
+    stroke-width: 4;
+  }
+}
+
+// icon background
+.d3-build-graph-step-icon {
+  fill: none;
+
+  &.-pending {
+    fill: var(--color-gray);
+  }
+
+  &.-running {
+    fill: var(--color-yellow);
+  }
+
+  &.-success {
+    fill: var(--color-green);
+  }
+
+  &.-failure {
+    fill: var(--color-red);
+  }
+
+  &.-canceled {
+    fill: var(--color-red);
+  }
+
+  &.-killed,
+  &.-skipped {
+    fill: var(--color-lavender);
+  }
+}
+
+// icon content
+.d3-build-graph-node-a svg {
+  stroke: var(--color-coal-dark);
+  stroke-width: 2;
+
+  &.-pending {
+    fill: var(--color-coal-dark);
+  }
+
+  &.-running {
+    fill: var(--color-yellow);
+  }
+
+  &.-success {
+    fill: var(--color-green);
+  }
+
+  &.-failure {
+    fill: var(--color-red);
+  }
+
+  &.-canceled {
+    fill: var(--color-red);
+  }
+
+  &.-killed,
+  &.-skipped {
+    fill: var(--color-coal-dark);
   }
 }
 
 .d3-build-graph-node-step-a {
-  // todo: lint:css-fix does not like this override
-  // &:focus,
-  // &:active {
-  //   outline: none;
-  // }
-
   &.-hover {
     text {
       fill: var(--color-primary);
@@ -271,11 +344,63 @@
 
   &.-failure,
   &.-canceled,
-  &.-skipped,
-  &.-killed {
+  &.-killed,
+  &.-skipped {
     stroke-width: 1;
 
     stroke: var(--color-gray);
+  }
+
+  &.-focus {
+    stroke: var(--color-primary);
+    stroke-width: 2;
+  }
+
+  &.-hover {
+    stroke: var(--color-primary);
+    stroke-width: 2;
+  }
+}
+
+.d3-build-graph-edge-tip {
+  fill: var(--color-gray);
+  stroke: var(--color-gray);
+}
+
+// end: classes controlled by d3
+
+// start: theme overrides
+
+.theme-light .elm-build-graph-legend-item {
+  stroke: var(--color-coal-light);
+}
+
+.theme-light .d3-build-graph-edge-tip {
+  fill: var(--color-coal-light);
+  stroke: var(--color-coal-light);
+}
+
+.theme-light .d3-build-graph-node-outline-rect {
+  &.-pending {
+    stroke: var(--color-coal-light);
+  }
+
+  &.-running {
+    stroke: var(--color-yellow);
+  }
+
+  &.-success {
+    stroke: var(--color-green);
+  }
+
+  &.-canceled,
+  &.-failure {
+    stroke: var(--color-red);
+  }
+
+  &.-killed,
+  &.-skipped {
+    stroke: var(--color-lavender);
   }
 
   &.-focus {
@@ -284,9 +409,43 @@
 
   &.-hover {
     stroke: var(--color-primary);
-    stroke-width: 3;
   }
 }
 
-// end: classes controlled by d3
+.theme-light .d3-build-graph-edge-path {
+
+  &.-pending,
+  &.-success,
+  &.-failure,
+  &.-canceled,
+  &.-killed,
+  &.-skipped {
+    stroke: var(--color-coal-light);
+  }
+
+  &.-focus {
+    stroke: var(--color-primary);
+  }
+
+  &.-hover {
+    stroke: var(--color-primary);
+  }
+}
+
+// icon content
+.theme-light .d3-build-graph-node-a svg {
+  stroke: var(--color-offwhite);
+
+  &.-pending {
+    fill: var(--color-offwhite);
+  }
+
+  &.-killed,
+  &.-skipped {
+    fill: var(--color-offwhite);
+  }
+}
+
+// end: theme overrides
+
 /*! purgecss end ignore */
