final accessibility fixes for now, updating colors

--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -174,7 +174,7 @@
   margin: 0;
   padding: 0;
 
-  color: var(--color-primary);
+  color: var(--color-primary2);
   font-weight: normal;
   font-size: inherit;
   text-decoration: underline;
