--- a/src/scss/_themes.scss
+++ b/src/scss/_themes.scss
@@ -6,6 +6,7 @@
 // dark theme (default)
 body,
 body.theme-dark {
+  --color-bg-darkest: var(--color-coal-dark);
   --color-bg-dark: var(--color-coal-dark);
   --color-bg: var(--color-coal);
   --color-bg-light: var(--color-coal-light);
@@ -14,6 +15,7 @@ body.theme-dark {
 
   --color-primary-dark: var(--color-cyan-dark);
   --color-primary: var(--color-cyan);
+  --color-primary2: var(--color-cyan);
   --color-primary-light: var(--color-cyan-light);
 
   --color-secondary-dark: var(--color-lavender-dark);
@@ -27,15 +29,17 @@ body.theme-dark {
 
 // light theme
 body.theme-light {
+  --color-bg-darkest: var(--color-gray-light);
   --color-bg-dark: var(--color-gray-light);
   --color-bg: var(--color-offwhite);
-  //   --color-bg-light: var(--color-white);
+//   --color-bg-light: var(--color-white);
   --color-bg-light: var(--color-bg-dark);
 
   --color-text: var(--color-coal);
 
   --color-primary-dark: var(--color-lavender-dark);
   --color-primary: var(--color-lavender); // ok for text
+  --color-primary2: var(--color-lavender-dark);
   --color-primary-light: var(--color-lavender-light);
 
   --color-secondary-dark: var(--color-cyan-dark);
@@ -150,6 +154,6 @@ body.theme-light {
   }
 
   .table-base .error-content {
-    color: var(--color-red);
+    color: var(--color-red-darkest);
   }
 }
