enhance: rotate graph orientation button

--- a/src/scss/_graph.scss
+++ b/src/scss/_graph.scss
@@ -48,6 +48,10 @@
   transform: rotate(0.2turn);
 }
 
+.build-graph-action-rotate.-vertical svg {
+  transform: rotate(0.25turn);
+}
+
 .elm-build-graph-window {
   position: relative;
 
