--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -191,7 +191,7 @@ nav {
     color: var(--color-black);
 
     list-style-type: none;
-    background-color: var(--color-bg-darkest);
+    background-color: var(--color-bg-dark);
   }
 
   li {
