--- a/src/scss/_themes.scss
+++ b/src/scss/_themes.scss
@@ -48,7 +48,7 @@ body.theme-light {
 }
 
 .theme-light {
-  header ~ .navigation a,
+  .navigation a,
   .table-base a,
   .logs-header .button.-link {
     color: var(--color-lavender-dark);
